--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "js-cookie": "^2.2.1",
     "module-alias": "^2.2.2",
     "react": "^17.0.1",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,5 +39,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "_moduleAliases": {
+    "@Assets": "./src/Assets/",
+    "@Components": "./src/Components/",
+    "@Constant": "./src/Constant/",
+    "@Navigation": "./src/Navigation/",
+    "@Redux": "./src/Redux/",
+    "@Styles": "src/Styles/",
+    "@Utils": "./src/Utils/"
   }
 }
