--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,7 @@
       "@Constant/*": ["./src/Constant/*"],
       "@Navigation/*": ["./src/Navigation/*"],
       "@Redux/*": ["./src/Redux/*"],
+      "@Screens/*": ["./src/Screens/*"],
       "@Styles/*": ["./src/Styles/*"],
       "@Utils/*": ["./src/Utils/*"]
     }
